# output-zero

./: Cargo.toml  README.md
docs/: ln_gossip.md  musig2.md
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
