[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
shared = { path = "../shared" }
risc0-zkvm = { version = "1.2.0"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rustreexo = { git = "https://github.com/halseth/rustreexo.git", branch = "usize-64-bit-le", features = ["with-serde"] }
bitcoin = { version = "0.32.5", features = ["std", "rand-std", "serde"] }
bincode = "1.3.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
clap = { version = "4.5.16", features = ["derive"] }
sha2 = "0.10.8"
bitcoin_hashes = "0.14.0"
k256 = { version = "0.13.3", features = ["serde"] }
serde_json = "1.0.128"
musig2 = { version = "0.2.2", default-features = false, features = ["k256"] }
secp256k1 = "0.30.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
