[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5"}
sha2 = "0.10.8"
bitcoin_hashes = "0.14.0"
musig2 = { version = "0.2.2", default-features = false, features = ["k256"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
